<resources>
    <string name="app_name">ProjectCafe</string>
    <string name="action_settings">Settings</string>
    <string name="cafe_image_description">Main cafe image</string>
    <string name="cafe_rank">Rank: %s</string>
    <string name="cafe_address">Address: %s</string>
    <string name="delete_button">Delete</string>
    <string name="edit_button">Edit</string>
    <string name="description">Description:</string>
    <string name="name">Cafe name</string>
    <string name="address">Address</string>
    <string name="rank">Rank</string>
    <string name="description_edit">Description</string>
    <string name="src">Link</string>
    <string name="save">Save</string>
    <string name="edit">Edit: %s</string>
    <string name="dialog_about_message">Fields must be filled!</string>
    <string name="dialog_about_title">Warning!</string>
    <string name="insertion_successful">Update successful</string>
    <string name="successful">Successful</string>
    <string name="error">Error</string>
    <string name="update_status">Status</string>
    <string name="insertion_status">Status</string>
    <string name="insertion_error">Insertion error</string>
    <string name="confirm">Confirm</string>
    <string name="delete_confirm">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="action_add_cafe">Add cafe</string>
    <string name="action_add_menu">Add dish</string>
    <string name="action_show_menu">Show menu</string>
    <string name="action_edit_cafe">Edit cafe</string>
    <string name="dish_name">Dish name</string>
    <string name="dish_type">Dish type</string>
    <string name="dish_portion">Dish portion</string>
    <string name="dish_cost">Dish cost</string>
    <string name="dish_time">Dish time</string>
    <string name="action_sort_menu_by_name_up">Sort by name up</string>
    <string name="action_sort_menu_by_name_down">Sort by name down</string>
    <string name="action_sort_menu_by_cost_up">Sort by cost up</string>
    <string name="action_sort_menu_by_cost_down">Sort by cost down</string>
    <string name="action_sort_menu_by_portion_up">Sort by portion up</string>
    <string name="action_sort_menu_by_portion_down">Sort by portion down</string>
    <string name="dish_cuisine">Dish cuisine</string>
    <string name="action_generate_statistic_cafe">Cafe statistic pdf</string>
    <string name="action_generate_statistic_menu">Dishes statistic pdf</string>
    <string name="action_generate_statistic_drinks">Drinks statistic pdf</string>
    <string name="action_generate_statistic_tobaccos">Tobaccos statistic pdf</string>
    <string name="action_generate_statistic_comments">Comments statistic pdf</string>
    <string name="action_sort_by">Sort by</string>
    <string name="action_sort_by_name_down">Sort by name down</string>
    <string name="action_sort_by_rank_up">Sort by rank up</string>
    <string name="action_sort_by_rank_down">Sort by rank down</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


</resources>
