<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_cafe_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.study.dokgo.projectcafe.view.EditCafeInfoActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/buttonPanel">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp">



            <EditText
                android:id="@+id/cafe_name_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text|textMultiLine"
                android:hint="@string/name"
                android:paddingTop="10dp"/>

            <EditText
                android:id="@+id/cafe_address_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text|textMultiLine"
                android:hint="@string/address"
                android:paddingTop="10dp"/>

            <EditText
                android:id="@+id/cafe_rank_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/rank"
                android:paddingTop="10dp"/>

            <EditText
                android:id="@+id/cafe_description_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text|textMultiLine"
                android:hint="@string/description_edit"
                android:paddingTop="10dp"/>

            <EditText
                android:id="@+id/cafe_src_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine|textUri"
                android:hint="@string/src"
                android:paddingTop="10dp"/>




        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/buttonPanel"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/colorGray"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/save_button_add"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:textColor="@color/colorBlack" />



    </LinearLayout>

</RelativeLayout>
